Fix logo alignment

--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -789,6 +789,18 @@ li {
         }
       }
 
+      a {
+        &.telia {
+          svg {
+            min-width: 255px;
+            position: relative;
+            top: -9px;
+            left: -20px;
+            height: 70px;
+          }
+        }
+      }
+
       svg {
         height: 60px;
         width: auto;
